[gd_scene load_steps=10 format=3 uid="uid://c36au6a2n2ydq"]

[ext_resource type="Script" path="res://scripts/machines/press_machine.gd" id="1_54isr"]
[ext_resource type="Texture2D" uid="uid://c0k7seh473gem" path="res://assets/sprites/machines/press/Old/press_machine.png" id="2_370oi"]
[ext_resource type="Texture2D" uid="uid://rq12fb3ps117" path="res://assets/sprites/machines/press/Old/lever_back.png" id="3_6bbv6"]
[ext_resource type="Texture2D" uid="uid://dec2jv16l0xyk" path="res://assets/sprites/machines/press/Old/lever_handle.png" id="4_fb3yp"]
[ext_resource type="Texture2D" uid="uid://rc3nr0klt7yl" path="res://assets/sprites/machines/press/Old/press_lower.png" id="5_o8lk5"]
[ext_resource type="Texture2D" uid="uid://c4ww66cv5jdnm" path="res://assets/sprites/machines/press/Old/press_upper.png" id="6_mwqab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_077jk"]
size = Vector2(96, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eq6qf"]
size = Vector2(250, 199.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j228y"]
size = Vector2(126, 82)

[node name="PressMachine" type="Node2D"]
position = Vector2(2, -1)
script = ExtResource("1_54isr")

[node name="PressMachineBody" type="Sprite2D" parent="."]
texture = ExtResource("2_370oi")

[node name="LeverBack" type="Sprite2D" parent="."]
position = Vector2(0, 112)
texture = ExtResource("3_6bbv6")

[node name="LeverHandle" type="Area2D" parent="."]
position = Vector2(0, 75)

[node name="Sprite2D" type="Sprite2D" parent="LeverHandle"]
texture = ExtResource("4_fb3yp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeverHandle"]
shape = SubResource("RectangleShape2D_077jk")

[node name="PressLower" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="PressLower"]
position = Vector2(0, -21)
texture = ExtResource("5_o8lk5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressLower"]
position = Vector2(1, -100.75)
shape = SubResource("RectangleShape2D_eq6qf")

[node name="PressUpper" type="Sprite2D" parent="."]
position = Vector2(1, -163)
texture = ExtResource("6_mwqab")

[node name="StaticBody2D" type="StaticBody2D" parent="PressUpper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressUpper/StaticBody2D"]
visible = false
position = Vector2(5, 25)
shape = SubResource("RectangleShape2D_j228y")
